<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PDAM Report</string>

    <string name="permission_denied">Permission Denied</string>
    <string name="presence_denied">Sedang di luar jadwal presensi</string>

    <string name="uname">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="logged_out">Akun Keluar</string>

    <string name="empty_field">Isian tidak boleh kosong</string>
    <string name="login_failed">Gagal masuk, cek data kembali</string>
    <string name="login_success">Berhasil Masuk!</string>

    <string name="enable_location">Aktifkan lokasi untuk melanjutkan.</string>
    <string name="invalid_auth">User not authenticated.</string>

    <string name="name">Dev-G</string>
    <string name="role">Kepala Suku</string>
    <string-array name="roles">
        <item>Petugas</item>
        <item>Admin</item>
    </string-array>
    <string name="pemasangan">Pemasangan</string>
    <string name="pemutusan">Pemutusan</string>
    <string name="report">Laporan</string>
    <string name="presence">Presensi</string>
    <string name="logout">Keluar</string>

    <string name="first_data">Status Kelayakan</string>
    <string name="second_data">Status Pemasangan</string>
    <string name="third_data">Status GPS</string>

    <string name="empty_list">Belum Ada Data Pelanggan</string>
    <string name="empty_list_presence">Belum Ada Data Presensi</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="take_photo">Ambil Foto</string>
    <string name="upload">Unggah</string>

    <string name="jenis_pekerjaan">Jenis Pekerjaan</string>
    <string name="pw">PW</string>
    <string name="nomor_registrasi">Nomor Registrasi</string>
    <string name="nomor_k_l">Nomor K/L</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="alamat_pelanggan">Alamat Pelanggan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="keterangan">Keterangan</string>
    <string name="dokumentasi">Dokumentasi</string>
    <string name="dokumentasiDokumen">Dokumentasi Dokumen Survei Kelayakan</string>
    <string name="dokumentasiSekitar">Dokumentasi Kondisi Sekitar</string>
    <string name="dokumentasiKonstruksi">Dokumentasi Konstruksi</string>
    <string name="dokumentasiMeter">Dokumentasi Nomor dan Segel Meter</string>
    <string name="dokumentasiPerspektif">Dokumentasi Perspektif Wilayah</string>
    <string name="dokumentasiSebelumCabut">Dokumentasi Sebelum Cabut</string>
    <string name="dokumentasiSesudahCabut">Dokumentasi Sesudah Cabut</string>

    <string name="meter">Meter</string>
    <string name="merk">Merk</string>
    <string name="diameter">Diameter</string>
    <string name="stand">Stand</string>
    <string name="nomor_meter">Nomor Meter</string>
    <string name="nomor_segel">Nomor Segel</string>

    <string name="koordinat">Koordinat</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>

    <string name="hapus">Hapus</string>
    <string name="simpan">Simpan</string>

    <string name="select_image">Ambil foto terlebih dahulu!</string>
    <string name="presence_already_done">Anda sudah presensi hari ini!</string>
    <string name="upload_success">Presensi Berhasil!</string>
    <string name="upload_failed">Presensi Gagal. Mohon Ulangi Kembali.</string>

    <string-array name="type_of_work">
        <item>Pemasangan baru</item>
        <item>Pemasangan kembali</item>
    </string-array>

    <string-array name="type_of_pw">
        <item>1</item>
        <item>4</item>
    </string-array>

    <string-array name="type_of_ket">
        <item>Layak</item>
        <item>Tidak layak</item>
    </string-array>

    <string-array name="type_of_merk">
        <item>ITR</item>
        <item>LIN</item>
        <item>PAM</item>
        <item>AQ</item>
        <item>BAR</item>
        <item>ACT</item>
        <item>ADR</item>
        <item>AI</item>
        <item>AQN</item>
        <item>AQV</item>
        <item>ARM</item>
        <item>AT</item>
        <item>BR</item>
        <item>FUJ</item>
        <item>I</item>
        <item>INC</item>
        <item>LIB</item>
        <item>M</item>
        <item>MM</item>
        <item>MT</item>
        <item>MUL</item>
        <item>PUJ</item>
        <item>RVT</item>
        <item>SB</item>
        <item>SEN</item>
        <item>SG</item>
        <item>SSS</item>
        <item>YG</item>
        <item>YT</item>
    </string-array>

    <string-array name="type_of_diameter">
        <item tools:ignore="TypographyFractions">1/2</item>
        <item tools:ignore="TypographyFractions">3/4</item>
        <item>1</item>
        <item tools:ignore="TypographyFractions">1 1/2</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="pemasangan_sambungan_baru">Pemasangan Sambungan Baru</string>
    <string name="verifikasi_pemasangan">Verifikasi Pemasangan</string>
    <string name="pemutusan_sementara">Pemutusan Sementara</string>

    <string name="location_found">Lokasi ditemukan</string>
    <string name="initialize_location">Sedang Mencari Lokasi…</string>
    <string name="location_not_found">Lokasi tidak dapat ditemukan</string>
    <string name="must_allow_permission">Anda Harus Mengizinkan Semua Perizinan Aplikasi</string>

    <string name="next">Lanjutkan</string>
    <string name="finish">Selesai</string>

    <string name="save_failed">Data gagal disimpan</string>
    <string name="save_success">Data berhasil disimpan</string>

    <string name="fill_all_dataImage">Isi semua data dan unggah semua gambar</string>
    <string name="fill_all_data">Isi semua data</string>

    <string name="delete_data">Konfirmasi Hapus Data"</string>
    <string name="delete_confirmation">Apakah anda yakin ingin menghapus data ini?</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="delete_success">Data berhasil dihapus</string>
    <string name="delete_failed">Data gagal dihapus</string>

    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="failed_access_data">Gagal mengakses data</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compressing_image">Foto sedang diproses…</string>
    <string name="compressing_image_success">Foto telah berhasil diproses. Silakan tunggu proses unggah.</string>
    <string name="compressing_image_failed">Memproses foto gagal</string>
    <string name="unavailable_network">Koneksi internet tidak tersedia</string>
    <string name="daftar_presensi">Daftar Presensi</string>
    <string name="detail_presensi">Detail Presensi</string>


</resources>